<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent" android:background="@color/fileBg">
	<Button android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:text="@string/btnSelectDir_label"
		android:id="@+id/btnSelectDir" android:paddingLeft="10dip"
		android:paddingRight="10dip"></Button>
	<TextView android:text="@string/file_title" android:gravity="center"
		android:layout_height="wrap_content" android:layout_width="fill_parent"
		android:background="@color/file_titleBg" android:textColor="@color/file_titleText"
		android:textSize="20sp">
	</TextView>
	<LinearLayout android:layout_width="wrap_content"
		android:layout_height="wrap_content">
		<TextView android:text="@string/file_folderName" android:id="@+id/file_folderName"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:textStyle="bold" android:background="@color/file_folderDirBg"
			android:textColor="@color/file_folderDirText" android:textSize="15sp"
			android:gravity="left">
		</TextView>
	</LinearLayout>
	<ListView android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:id="@+id/users"
		android:cacheColorHint="#00000000">
	</ListView>
</LinearLayout>
