<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@+id/lv_ol_content"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	xmlns:android="http://schemas.android.com/apk/res/android">
	<TextView android:id="@+id/ol_label0" android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:text="Rank"
		android:layout_alignParentTop="true" android:layout_alignParentLeft="true"
		android:layout_marginRight="5dip">
	</TextView>
	<TextView android:id="@+id/ol_label1" android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:text="@string/ol_label1"
		android:layout_alignParentTop="true" android:layout_toRightOf="@id/ol_label0">
	</TextView>
	<TextView android:id="@+id/ol_label2" android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:text="@string/ol_label2"
		android:layout_alignParentTop="true" android:layout_centerHorizontal="true"
		android:paddingLeft="80dip">
	</TextView>
	<TextView android:id="@+id/ol_label3" android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:text="@string/ol_label3"
		android:layout_alignParentTop="true" android:layout_alignParentRight="true"
		android:layout_marginRight="10dip">
	</TextView>

	<TextView android:id="@+id/ol_value0" android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:layout_alignParentLeft="true"
		android:layout_below="@+id/ol_label0" android:textSize="14sp"
		android:textColor="#FFFFFF" android:layout_marginRight="5dip">
	</TextView>
	<TextView android:id="@+id/ol_value1" android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:layout_below="@+id/ol_label1"
		android:textSize="20sp" android:textColor="@color/ol_value1"
		android:layout_toRightOf="@+id/ol_value0">
	</TextView>
	<TextView android:id="@+id/ol_value2" android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:layout_centerHorizontal="true"
		android:layout_below="@+id/ol_label2" android:textSize="18sp"
		android:textColor="@color/ol_value2" android:paddingLeft="80dip">
	</TextView>
	<TextView android:id="@+id/ol_value3" android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:layout_alignParentRight="true"
		android:layout_below="@+id/ol_label3" android:textSize="13sp"
		android:textColor="@color/ol_value3" android:layout_marginRight="10dip">
	</TextView>
</RelativeLayout>

